--- a/src/components/partials/NavBar/style.scss
+++ b/src/components/partials/NavBar/style.scss
@@ -10,6 +10,9 @@
     z-index: 12;
     top: 0;
     transition: height .2s;
+    @include maxW(975px) {
+        height: 110px;
+    }
     .container {
         display: flex;
         flex-wrap: wrap;
@@ -18,6 +21,22 @@
         height: 100%;
         margin: 0 auto;
         position: relative;
+        @include minW(1348px) {
+            width: 1268px !important;
+        }
+        @include minW(976px) {
+            width: 896px;
+        }
+        @include maxW(975px) {
+            width: 360px;
+
+            padding: 0 8px;
+            height: 65px;
+            box-sizing: border-box;
+        }
+        @include maxW(414px) {
+            width: 100%;
+        }
     }
     &__left {
         display: inline-block;
@@ -27,6 +46,9 @@
             margin: 0 24px;
             cursor: pointer;
             display: block;
+            @include maxW(975px) {
+                margin: initial;
+            }
         }
     }
     &__right {
@@ -34,38 +56,6 @@
         flex-wrap: wrap;
         align-items: center;
         height: 100%;
-        .comp__search {
-            color: #333;
-            max-width: 600px;
-            min-width: 100px;
-            max-height: 34px;
-            position: relative;
-            border: none;
-            outline: none;
-            background: #f7f7f7;
-            border-radius: 20px;
-            padding: 0 14px;
-            margin-right: 45px;
-            line-height: 34px;
-            transition: all .2s;
-            @include lg {
-                width: 600px;
-            }
-            &-main {
-                &-input {
-                    font-size: 14px;
-                    color: #333;
-                    width: calc(100% - 30px);
-                    background: #f7f7f7;
-                }
-                &-search__icon {
-                    width: 18px;
-                    line-height: 34px;
-                    vertical-align: text-bottom;
-                    cursor: pointer;
-                }
-            }
-        }
         .comp__dropdown {
             &-btn {
                 display: flex;
@@ -90,10 +80,30 @@
             align-items: center;
             margin-left: 30px;
             cursor: pointer;
+            @include maxW(975px) {
+                margin-left: 20px;
+            }
+            &-title {
+                @include maxW(975px) {
+                    display: none;
+                    width: 0;
+                    font-size: 0;
+                }
+            }
             &-icon {
                 display: block;
                 width: 24px;
                 height: 24px;
+            }
+        }
+        .login-avatar {
+            margin-left: 30px;
+            cursor: pointer;
+            .title-login {
+                font-size: 14px;
+                color: #333;
+                letter-spacing: 0;
+                line-height: 18px;
             }
         }
 
