--- a/src/components/shared/avatar/style.scss
+++ b/src/components/shared/avatar/style.scss
@@ -1,4 +1,4 @@
-@import "../../styles.scss";
+@import "../../../styles.scss";
 
 .avatar {
     width: 30px;
@@ -16,5 +16,9 @@
         width: 100%;
         height: 100%;
         @include midimg();
+        @include maxW(975px) {
+            margin-left: 0;
+            margin-right: 0;
+        }
     }
 }
